--- a/src/Pages/Student/Quiz.module.css
+++ b/src/Pages/Student/Quiz.module.css
@@ -5,7 +5,7 @@
 }
 
 #options {
- 
+
     display: grid;
     grid-template-columns: repeat(2, 20rem);
     grid-template-rows: repeat(2, 6rem);
@@ -45,7 +45,7 @@
 
 @media (max-width: 1200px) {
     #options {
-        border: 1px solid red;
+
         display: grid;
         grid-template-columns: repeat(2, 12rem);
         grid-template-rows: repeat(2, 6rem);
@@ -56,11 +56,20 @@
     #options button {
         width: 200px;
     }
+
+    #multiAnswer {
+        position: absolute;
+        right: 0;
+        margin-right: 30px;
+        margin-top: 120px;
+        font-size: 18px;
+
+    }
 }
 
 @media (max-width: 590px) {
     #options {
-        border: 1px solid red;
+
         display: grid;
         grid-template-columns: repeat(1, 25rem);
         justify-content: space-around;
@@ -70,4 +79,37 @@
     #options button {
         width: 400px;
     }
+
+    #multiAnswer {
+        position: absolute;
+        right: 0;
+        margin-right: 30px;
+        margin-top: 120px !important;
+        font-size: 18px;
+
+    }
+}
+
+
+#difficulty {
+    margin-left: 450px;
+    margin-top: 20px;
+    position: absolute;
+    right: 0;
+    margin-right: 30px;
+    font-weight: 600;
+}
+
+#multiAnswer {
+    position: absolute;
+    right: 0;
+    margin-right: 30px;
+    margin-top: 70px;
+    font-size: 18px;
+
+}
+
+#question {
+    text-align: left;
+    margin-left: 22px;
 }
